<resources>
    <string name="app_name">Kitchen Thermometer</string>
    <string name="host">Host</string>
    <string name="connect_button">Connect</string>
    <string name="pref_hostname">hostname</string>
    <string name="pref_hostname_title">Hostname</string>
    <string name="pref_interpolate_heatmap">interpolate_heatmap</string>
    <string name="pref_interpolate_heatmap_title">Interpolate</string>
    <string name="pref_smooth_heatmap">smooth_heatmap</string>
    <string name="pref_smooth_heatmap_title">Smooth</string>
    <string name="connect">Connect</string>
    <string name="action_settings">Settings</string>
    <string name="action_reconnect">Reconnect</string>
    <string name="ok">OK</string>
    <string name="dialog_hostname_not_set_title">Hostname not set</string>
    <string name="dialog_hostname_not_set_message">Please set the hostname of the target device.</string>
    <string name="state_unknown">Unknown state</string>
    <string name="state_connected">Connected to %s</string>
    <string name="state_connecting">Connecting to %s ...</string>
    <string name="state_not_connected">Not connected</string>
    <string name="state_failed">Failed to connect to %s</string>
    <string name="pref_connection_title">Connection</string>
    <string name="pref_heatmap_title">Heatmap</string>
    <string name="pref_temperature_scale">temperature_scaling</string>
    <string name="pref_temperature_scaling_title">Temperature Scale</string>
    <string name="pref_temperature_scale_value_auto">auto</string>
    <string name="pref_temperature_scale_value_full">full</string>
    <string name="pref_temperature_scale_value_fixed">fixed</string>
    <string name="pref_temperature_range_min">temperature_range_min</string>
    <string name="pref_temperature_range_min_title">Minimum Temperature</string>
    <string name="pref_temperature_range_max">temperature_range_max</string>
    <string name="pref_temperature_range_max_title">Maximum Temperature</string>
    <string name="nan_temperature">NaN °C</string>
    <string name="celsius_temperature">%.1f °C</string>
    <string name="celsius_temperature_summary">%s °C</string>
    <string name="edit_alarms">Edit Alarms</string>
    <string name="pref_alarm_lower_limit">alarm_lower_limit</string>
    <string name="pref_alarm_lower_limit_title">Cooling Down Alarm Threshold</string>
    <string name="pref_alarm_upper_limit">alarm_upper_limit</string>
    <string name="pref_alarm_upper_limit_title">Heating Up Alarm Threshold</string>
    <string name="pref_alarm_lower_enabled">alarm_lower_enabled</string>
    <string name="pref_alarm_lower_enabled_title">Cooling Down Alarm</string>
    <string name="pref_alarm_upper_enabled">alarm_upper_enabled</string>
    <string name="pref_alarm_upper_enabled_title">Heating Up Alarm</string>
</resources>
