<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:key="pref_connection"
        android:title="@string/pref_connection_title">

        <de.rfnbrgr.kitchenthermometer.BetterEditTextPreference
            android:inputType="text"
            android:key="@string/pref_hostname"
            android:maxLines="1"
            android:summary="%s"
            android:title="@string/pref_hostname_title" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="pref_heatmap"
        android:title="@string/pref_heatmap_title">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/pref_interpolate_heatmap"
            android:title="@string/pref_interpolate_heatmap_title" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/pref_smooth_heatmap"
            android:title="@string/pref_smooth_heatmap_title" />
        <ListPreference
            android:defaultValue="@string/pref_temperature_scale_value_auto"
            android:dialogTitle="@string/pref_temperature_scaling_title"
            android:entries="@array/pref_temperature_scale_entries"
            android:entryValues="@array/pref_temperature_scale_values"
            android:key="@string/pref_temperature_scale"
            android:title="@string/pref_temperature_scaling_title"
            android:summary="%s"
            />
        <de.rfnbrgr.kitchenthermometer.BetterEditTextPreference
            android:inputType="numberDecimal"
            android:defaultValue="0"
            android:key="@string/pref_temperature_range_min"
            android:maxLines="1"
            android:summary="@string/celsius_temperature_summary"
            android:title="@string/pref_temperature_range_min_title" />
        <de.rfnbrgr.kitchenthermometer.BetterEditTextPreference
            android:dependency=""
            android:inputType="numberDecimal"
            android:defaultValue="100"
            android:key="@string/pref_temperature_range_max"
            android:maxLines="1"
            android:summary="@string/celsius_temperature_summary"
            android:title="@string/pref_temperature_range_max_title" />
    </PreferenceCategory>

</PreferenceScreen>